--- a/DarkMatter.theme.css
+++ b/DarkMatter.theme.css
@@ -12,10 +12,13 @@
 :root {
     --avatar-size: 32px;
     --background-image: url('https://i.imgur.com/7SbtKvw.png');
-    --home-image: url('https://i.imgur.com/233d55Y.gif');
+    --home-image: url('https://64.media.tumblr.com/4ea2eb8ce92255ae1f512e974f114e02/tumblr_oigcd87gjj1tc258so2_r1_500.gifv');
     --background-solid: #161921;
     --background-solid-dark: #101218;
     --background-solid-darker: #0c0e12;
     --accent: 37, 172, 232;
     --accent-alt: 29, 101, 134;
+    
+    
 }
+
