--- a/DarkMatter.theme.css
+++ b/DarkMatter.theme.css
@@ -13,7 +13,7 @@
     --avatar-size: 32px;
     --background-image: url('https://wallpapercave.com/wp/3oWBxHN.jpg');
     --home-image: url('https://64.media.tumblr.com/4ea2eb8ce92255ae1f512e974f114e02/tumblr_oigcd87gjj1tc258so2_r1_500.gifv');
-    --background-solid: #161921;
+    --background-solid: transparent;
     --background-solid-dark: #7877e6 ;
     --background-solid-darker: #101218;
     --accent: 37, 172, 232;
